@@ -5,18 +5,11 @@ How to build
 ------
 You need SVN client version 1.6.x to checkout code anonymously and Maven 3.0.x for building.
 
-(1) Click the "Download ZIP" button to download openam1200-japanese-properties-master.zip.  
-(2) Execute the commands:  
+Execute the commands to copy Japanese properties to the OpenAM 12.0.0 source code and build it by Maven:   
 ```bash
-unzip openam1200-japanese-properties-master.zip
-rm openam1200-japanese-properties-master/README.*
-rm openam1200-japanese-properties-master/*.sh
-svn co https://svn.forgerock.org/openam/tags/12.0.0/openam/
-cp -r openam1200-japanese-properties-master/* openam/
-rm -fr openam1200-japanese-properties-master
-cd openam
-export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
-mvn -DskipTests=true clean install
+wget -N --no-check-certificate https://raw.githubusercontent.com/k-tamura/openam1300-japanese-properties/master/build-openam-jp.sh
+chmod +x build-openam-jp.sh
+./build-openam-jp.sh
 ```
 
 How to deploy without build
@@ -32,30 +25,6 @@ chmod +x deploy-jp-files.sh
 ```
 (3) Start up the web application container.  
 
-Or
-
-(1) Click the "Download ZIP" button to download openam1200-japanese-properties-master.zip.  
-(2) Shut down the web application container in which you deployed OpenAM.  
-(3) Execute the commands:  
-```bash
-export AM_DIR=/usr/share/tomcat6/webapps/openam
-mkdir -p $AM_DIR/XUI/locales/ja/
-mkdir -p $AM_DIR/policyEditor/locales/ja/
-unzip openam1200-japanese-properties-master.zip
-cp -pr $AM_DIR/config/auth/default_ja $AM_DIR/config/auth/default_ja_bak
-mv -f $AM_DIR/policyEditor/org/forgerock/openam/ui/policy/SiteConfigurationDelegate.js $AM_DIR/policyEditor/org/forgerock/openam/ui/policy/SiteConfigurationDelegate.js.bak
-mv -f $AM_DIR/XUI/org/forgerock/openam/ui/common/delegates/SiteConfigurationDelegate.js $AM_DIR/XUI/org/forgerock/openam/ui/common/delegates/SiteConfigurationDelegate.js.bak
-cp openam1200-japanese-properties-master/openam-ui-policy/src/main/js/org/forgerock/openam/ui/policy/delegates/SiteConfigurationDelegate.js $AM_DIR/policyEditor/org/forgerock/openam/ui/policy/SiteConfigurationDelegate.js
-cp openam1200-japanese-properties-master/openam-ui-ria/src/main/js/org/forgerock/openam/ui/common/delegates/SiteConfigurationDelegate.js $AM_DIR/XUI/org/forgerock/openam/ui/common/delegates/SiteConfigurationDelegate.js
-cp -r openam1200-japanese-properties-master/openam-ui-ria/src/main/resources/locales/ja/translation.json $AM_DIR/XUI/locales/ja/
-cp -r openam1200-japanese-properties-master/openam-ui-policy/src/main/resources/locales/ja/translation.json $AM_DIR/policyEditor/locales/ja/
-cp -rf openam1200-japanese-properties-master/openam-server-only/src/main/webapp/config/auth/default_ja/* $AM_DIR/config/auth/default_ja/
-find openam1200-japanese-properties-master -name '*.properties' -print | xargs cp -t $AM_DIR/WEB-INF/classes/
-rm -fr openam1200-japanese-properties-master
-rm openam1200-japanese-properties-master.zip
-```
-(4) Start up the web application container.  
-
 How to remove the files
 ------
 (1) Shut down the web application container in which you deployed OpenAM.  
@@ -64,23 +33,6 @@ How to remove the files
 wget -N --no-check-certificate https://raw.githubusercontent.com/k-tamura/openam1200-japanese-properties/master/undeploy-jp-files.sh
 chmod +x undeploy-jp-files.sh
 ./undeploy-jp-files.sh
-```
-(3) Start up the web application container.  
-
-Or
-
-(1) Shut down the web application container in which you deployed OpenAM.  
-(2) Execute the commands:  
-```bash
-export AM_DIR=/usr/share/tomcat6/webapps/openam
-rm -fr $AM_DIR/XUI/locales/ja
-rm -fr $AM_DIR/policyEditor/locales/ja
-rm -f $AM_DIR/WEB-INF/classes/*_ja.properties
-\cp -fr $AM_DIR/config/auth/default_ja_bak/* $AM_DIR/config/auth/default_ja/
-rm -f $AM_DIR/config/auth/default_ja/DeviceIdMatch.xml $AM_DIR/config/auth/default_ja/DeviceIdSave.xml
-rm -fr $AM_DIR/config/auth/default_ja_bak
-mv -f $AM_DIR/policyEditor/org/forgerock/openam/ui/policy/SiteConfigurationDelegate.js.bak $AM_DIR/policyEditor/org/forgerock/openam/ui/policy/SiteConfigurationDelegate.js
-mv -f $AM_DIR/XUI/org/forgerock/openam/ui/common/delegates/SiteConfigurationDelegate.js.bak $AM_DIR/XUI/org/forgerock/openam/ui/common/delegates/SiteConfigurationDelegate.js
 ```
 (3) Start up the web application container.  
 
